k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quilly-support
  namespace: quilly-support
spec:
  type: NodePort
  selector:
    app: quilly-support
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30082
      protocol: TCP
