k8s/ingress-selfsigned.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quilly-support
  namespace: quilly-support
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - __APP_DOMAIN__
      secretName: __TLS_SECRET_NAME__
  rules:
    - host: __APP_DOMAIN__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quilly-support
                port:
                  number: 8000
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quilly-support
                port:
                  number: 8000
